tests/ui/parser/issues/issue-14303-fncall.generic_arg.stderr
error[E0747]: placeholder provided when a lifetime was expected
  --> $DIR/issue-14303-fncall.rs:12:77
   |
LL |     let _x = (*start..*end).map(|x| S { a: start, b: end }).collect::<Vec<S<_, 'a>>>();
   |                                                                             ^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0747`.
